SONAR-7653 remove Java option XX:MaxPermSize
this option is dropped from java 8